pkg/provider/kubernetes/gateway/fixtures/httproute/listener_isolation.yml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-gateway-class
spec:
  controllerName: traefik.io/gateway-controller

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - name: catchall
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same
    - name: precise
      protocol: HTTP
      port: 80
      hostname: abc.example.com
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-other-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - name: catchall
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-app-catchall
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: catchall
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /catchall
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
          kind: Service
          group: ""

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-app-precise
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: precise
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /precise
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
          kind: Service
          group: ""

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-app-other
  namespace: default
spec:
  parentRefs:
    - name: my-other-gateway
      sectionName: catchall
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /other
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
          kind: Service
          group: ""
